--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <!-- header -->
 
     <!-- hero area -->
-    <section id="hero " class="mt-[50px]">
+    <section id="hero" class="mt-[50px]">
       <div class="container mx-auto bg-slate-300 rounded-3xl">
         <div class="grid 2xl:grid-cols-2 xl:grid-cols-2 grid-cols-1 lg:px-24 px-10 pb-0 items-center relative">
-          <div class="hero-text py-[70px]" data-aos="fade-right">
+          <div class="hero-text py-[70px]" data-aos="fade-in">
             <h1 class="2xl:text-7xl md:text-[50px] text-[30px] font-bold leading-tight mb-4">
               Discover the <br class="xl:block hidden" />
               best destinations <br class="xl:block hidden" />
@@ -236,6 +236,7 @@
     </div>
     <!-- call to action -->
 
+    <!-- testimonial -->
     <section id="testimonial" data-aos="fade-up">
       <div class="container mx-auto 2xl:px-32">
         <div class="grid lg:grid-cols-2 grid-cols-1 items-center">
@@ -296,7 +297,9 @@
         </div>
       </div>
     </section>
+    <!-- testimonial -->
 
+    <!-- get started -->
     <section id="get_started" class="mt-32" data-aos="fade-up">
       <div class="container mx-auto 2xl:px-32">
         <div class="bg-blue-400 text-center rounded-xl py-[50px]">
@@ -309,7 +312,9 @@
         </div>
       </div>
     </section>
+    <!-- get started -->
 
+    <!-- footer -->
     <footer class="mt-32 md:mx-0 mx-5" data-aos="fade-up">
       <div class="container mx-auto 2xl:px-32">
         <div class="grid lg:grid-cols-6 md:grid-cols-3 grid-cols-1 lg:gap-0 gap-10">
@@ -376,7 +381,9 @@
         </div>
       </div>
     </footer>
+    <!-- footer -->
 
+    <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="assets/js/app.js"></script>
