--- a/index-2.html
+++ b/index-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Planet - Homepage</title>
+    <title>Planet - Homepage 2</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
@@ -86,7 +86,7 @@
             </span>
           </div>
           <div class="hero-image 2xl:absolute xl:absolute bottom-0 right-0" data-aos="fade-right" data-aos-delay="200">
-            <img class="text-right 2xl:w-full xl:w-[600px]" src="assets/images/suitcase.png" alt="" />
+            <img class="text-right 2xl:w-full xl:w-[600px]" src="assets/images/suitcase-2.png" alt="" />
           </div>
         </div>
       </div>
@@ -261,7 +261,7 @@
       <div class="container mx-auto 2xl:px-32 px-5">
         <div class="grid lg:grid-cols-2 grid-cols-1 items-center">
           <div class="cta-image lg:order-first order-last md:mt-0 mt-10" data-aos="fade-down" data-aos-delay="150">
-            <img class="xl:-mt-[100px]" src="assets/images/cta-girl.png" alt="cta-image.png" />
+            <img class="xl:-mt-[100px]" src="assets/images/cta-girl-2.png" alt="cta-image.png" />
           </div>
           <div class="cta-content lg:pt-0 pt-20" data-aos="fade-right">
             <h2 class="xl:text-[55px] md:text-[40px] text-[30px] font-bold leading-[1.2]">Take the best weekend and enjoy your place</h2>
