--- a/index-3.html
+++ b/index-3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Planet - Homepage</title>
+    <title>Planet - Homepage 3</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
@@ -68,7 +68,7 @@
 
     <!-- hero area -->
     <section id="hero" class="md:mt-[50px] mt-[20px]">
-      <div class="container mx-auto bg-slate-300 rounded-3xl">
+      <div class="container mx-auto rounded-3xl">
         <div class="grid 2xl:grid-cols-2 xl:grid-cols-2 grid-cols-1 lg:px-24 px-10 pb-0 items-center relative">
           <div class="hero-text md:py-[70px] py-10">
             <h1 class="2xl:text-7xl md:text-[50px] text-[30px] font-bold leading-tight md:mb-4 mb-0" data-aos="fade-down" data-aos-delay="300">
@@ -86,7 +86,7 @@
             </span>
           </div>
           <div class="hero-image 2xl:absolute xl:absolute bottom-0 right-0" data-aos="fade-right" data-aos-delay="200">
-            <img class="text-right 2xl:w-full xl:w-[600px]" src="assets/images/suitcase.png" alt="" />
+            <img class="text-right 2xl:w-full xl:w-[600px]" src="assets/images/suitcase-3.png" alt="" />
           </div>
         </div>
       </div>
@@ -177,7 +177,7 @@
           </div>
           <div class="group destination bg-white shadow-xl rounded-[25px] pb-5" data-aos="fade-up" data-aos-delay="300">
             <div class="image-wrapper relative overflow-hidden rounded-md">
-              <img class="w-full group-hover:scale-105 transition" src="assets/images/destination/3.jpg" alt="" />
+              <img class="w-full group-hover:scale-105 transition h-[387px]" src="assets/images/destination/3.jpg" alt="" />
               <span class="location absolute top-5 right-5 text-white group-hover:text-orange-500 transition"><i class="fas fa-map-marker-alt"></i> Brazil</span>
             </div>
             <div class="destination-text p-7">
@@ -261,7 +261,7 @@
       <div class="container mx-auto 2xl:px-32 px-5">
         <div class="grid lg:grid-cols-2 grid-cols-1 items-center">
           <div class="cta-image lg:order-first order-last md:mt-0 mt-10" data-aos="fade-down" data-aos-delay="150">
-            <img class="xl:-mt-[100px]" src="assets/images/cta-girl.png" alt="cta-image.png" />
+            <img class="xl:-mt-[100px]" src="assets/images/cta-girl-2.png" alt="cta-image.png" />
           </div>
           <div class="cta-content lg:pt-0 pt-20" data-aos="fade-right">
             <h2 class="xl:text-[55px] md:text-[40px] text-[30px] font-bold leading-[1.2]">Take the best weekend and enjoy your place</h2>
