--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <section id="featured" class="md:px-0 px-5 md:mt-0 mt-20">
       <div class="container 2xl:px-32 mx-auto">
         <div class="grid xl:grid-cols-2 grid-cols-1 items-center">
-          <div class="featured-image relative xl:w-full xl:w-[650px] w-full xl:mb-0 mb-10">
+          <div class="featured-image relative xl:w-full lg:w-[650px] w-full xl:mb-0 mb-10">
             <img class="w-full" src="assets/images/featured-1.png" alt="featured-image-one" data-aos="fade-in" />
             <div class="absolute bottom-0 right-14 bg-white w-[245px] p-6 shadow-xl rounded-xl" data-aos="fade-up" data-aos-delay="250">
               <h4 class="text-[25px] font-bold">London</h4>
