destination image fixed

--- a/index-3.html
+++ b/index-3.html
@@ -177,7 +177,7 @@
           </div>
           <div class="group destination bg-white shadow-xl rounded-[25px] pb-5" data-aos="fade-up" data-aos-delay="300">
             <div class="image-wrapper relative overflow-hidden rounded-md">
-              <img class="w-full group-hover:scale-105 transition h-[387px]" src="assets/images/destination/3.jpg" alt="" />
+              <img class="w-full group-hover:scale-105 transition" src="assets/images/destination/3.jpg" alt="" />
               <span class="location absolute top-5 right-5 text-white group-hover:text-orange-500 transition"><i class="fas fa-map-marker-alt"></i> Brazil</span>
             </div>
             <div class="destination-text p-7">
